_build/html/reports/ModernRotors.log
Traceback (most recent call last):
  File "/Users/sumeetkumar/anaconda3/envs/jupyter_nb/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/sumeetkumar/anaconda3/envs/jupyter_nb/lib/python3.8/site-packages/nbclient/client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/sumeetkumar/anaconda3/envs/jupyter_nb/lib/python3.8/site-packages/nbclient/util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/sumeetkumar/anaconda3/envs/jupyter_nb/lib/python3.8/site-packages/nbclient/util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "/Users/sumeetkumar/anaconda3/envs/jupyter_nb/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/Users/sumeetkumar/anaconda3/envs/jupyter_nb/lib/python3.8/site-packages/nbclient/client.py", line 558, in async_execute
    await self.async_execute_cell(
  File "/Users/sumeetkumar/anaconda3/envs/jupyter_nb/lib/python3.8/site-packages/nbclient/client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/sumeetkumar/anaconda3/envs/jupyter_nb/lib/python3.8/site-packages/nbclient/client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
## Old vs the New

```{figure} ../../assets/HillerROERotorcycle.jpeg
---
height: 150px
name: HillerROERotorcycle
---
Hiller ROE Rotorcycle [source](https://en.wikipedia.org/wiki/Hiller_ROE_Rotorcycle#/media/File:Hiller_YROE-1.jpg)
```

------------------

[0;36m  File [0;32m"/var/folders/27/8tl2p5616cj22kvkhsy0gjcw0000gn/T/ipykernel_11190/2345695264.py"[0;36m, line [0;32m3[0m
[0;31m    ```{figure} ../../assets/HillerROERotorcycle.jpeg[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (2345695264.py, line 3)

